@@ -1,9 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.181 2005/11/06 16:41:08 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.182 2005/11/19 21:03:51 allanonjl Exp $
 
 *GLI-gtkfe-0.3 (27 Oct 2005)
-
+  
+  19 Nov 2005; John N. Laliberte <allanonjl@gentoo.org>
+  ExtraPackages.py: use new method get_install_package_list() from
+  installprofile.
+  
   6 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
   Everybody loves Hypnotoad..err...Futurebar!
 
